--- a/Week2_HW1.ipynb
+++ b/Week2_HW1.ipynb
@@ -2079,7 +2079,7 @@
         "ax = sns.kdeplot(data=tips,\n",
         "                 x=\"total_bill\",\n",
         "                 y=\"tip\",\n",
-        "                 shade=True)\n",
+        "                 fill=True)\n",
         "ax.set_title('Kernel Density Plot of Total Bill and Tip')\n",
         "ax.set_xlabel('Total Bill')\n",
         "ax.set_ylabel('Tip')\n"
