--- a/Week3_HW2.ipynb
+++ b/Week3_HW2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP5R3oa7LnMXKKBag84u7Xe",
+      "authorship_tag": "ABX9TyMbKtfEzKM3w/D51ge0ANFc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1908,39 +1908,37 @@
     {
       "cell_type": "code",
       "source": [
-        "# 원본 csv파일을 다시로딩하고\n",
-        "# survived속성만 별도분리해 클래스결정값 데이터세트로 만들기\n",
-        "\n",
-        "\n",
-        "from sklearn.preprocessing import LabelEncoder\n",
-        "#원본 데이터를 재로딩하고, 피처 데이터 세트와 레이블 데이터 세트 추출\n",
+        "# 원본 csv파일을 다시 로딩\n",
         "titanic_df=pd.read_csv('kaggle_data/train.csv')\n",
+        "\n",
+        "# 레이블인 survived 속성만 분리해 클래스결정값 데이터세트로 만들기\n",
         "y_titanic_df=titanic_df['Survived']\n",
         "\n",
-        "# survived속성을 드롭하고 transform_features()를 적용해 데이터가공\n",
+        "# survived 속성을 드롭하여 피처 데이터세트 만들기\n",
         "X_titanic_df=titanic_df.drop('Survived',axis=1)\n",
-        "X_titanic_df=transform_features(X_titanic_df)\n",
-        ""
+        "\n",
+        "# transform_features 이용해 피처 데이터세트 가공하기\n",
+        "from sklearn.preprocessing import LabelEncoder\n",
+        "X_titanic_df=transform_features(X_titanic_df)"
       ],
       "metadata": {
         "id": "VjJbVDPrPj3z"
       },
-      "execution_count": 23,
+      "execution_count": 43,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "# train_test_split() API 이용해 테스트데이터세트 추출출\n",
+        "# train_test_split() API 이용해 테스트 데이터세트 추출\n",
         "from sklearn.model_selection import train_test_split\n",
-        "\n",
         "X_train,X_test,y_train,y_test = train_test_split(X_titanic_df,y_titanic_df,\n",
-        "                                                 test_size=0.2, random_state=11)"
+        "                                                 test_size=0.2)"
       ],
       "metadata": {
         "id": "2Zqjc2pQd1wN"
       },
-      "execution_count": 25,
+      "execution_count": 44,
       "outputs": []
     },
     {
@@ -1970,15 +1968,14 @@
       "cell_type": "code",
       "source": [
         "# Classifier 클래스 생성\n",
-        "#  예제 수행할 때마다 같은 결과를 출력하기 위해서는 random_state 지정\n",
         "dt_clf=DecisionTreeClassifier()\n",
         "rf_clf=RandomForestClassifier()\n",
-        "lr_clf=LogisticRegression(max_iter = 1000) # 경고 문자 해결"
+        "lr_clf=LogisticRegression() # 경고 문자 해결"
       ],
       "metadata": {
         "id": "-cpccYWVePlx"
       },
-      "execution_count": 37,
+      "execution_count": 45,
       "outputs": []
     },
     {
@@ -2006,17 +2003,31 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "PsztqUffev1I",
-        "outputId": "4f39787e-0ed0-442e-c69d-0a632abfdc6b"
+        "outputId": "b2090a5b-01da-4477-b2ef-9c40fa98a8ce"
       },
-      "execution_count": 38,
+      "execution_count": 46,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "DecisionTreecClassifier 정확도:0.7821\n",
-            "RandomForestClassifier 정확도0.8547\n",
-            "LogisticRegression 정확도0.8492\n"
+            "DecisionTreecClassifier 정확도:0.7877\n",
+            "RandomForestClassifier 정확도0.7933\n",
+            "LogisticRegression 정확도0.7933\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.10/dist-packages/sklearn/linear_model/_logistic.py:458: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+            "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+            "\n",
+            "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+            "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+            "Please also refer to the documentation for alternative solver options:\n",
+            "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+            "  n_iter_i = _check_optimize_result(\n"
           ]
         }
       ]
