--- a/Week3_HW2.ipynb
+++ b/Week3_HW2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMbKtfEzKM3w/D51ge0ANFc",
+      "authorship_tag": "ABX9TyOX4GI/glkC77oNLCoGHwVO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1970,7 +1970,7 @@
         "# Classifier 클래스 생성\n",
         "dt_clf=DecisionTreeClassifier()\n",
         "rf_clf=RandomForestClassifier()\n",
-        "lr_clf=LogisticRegression() # 경고 문자 해결"
+        "lr_clf=LogisticRegression(max_iter = 1000) # 경고 문자 해결"
       ],
       "metadata": {
         "id": "-cpccYWVePlx"
