--- a/Week3_HW2.ipynb
+++ b/Week3_HW2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOX4GI/glkC77oNLCoGHwVO",
+      "authorship_tag": "ABX9TyPBex1IYARroGE+T6y6HLx0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1985,15 +1985,13 @@
         "dt_clf.fit(X_train,y_train)\n",
         "dt_pred=dt_clf.predict(X_test)\n",
         "print('DecisionTreecClassifier 정확도:{0:.4f}'.format(accuracy_score(y_test,dt_pred)))\n",
-        "# format {0} 소수점아래 자릿수 4로 제한\n",
         "\n",
-        "# RandomForestClassifier 학습/예측/평가\n",
-        "\n",
+        "# Random Forest Classifier 학습/예측/평가\n",
         "rf_clf.fit(X_train,y_train)\n",
         "rf_pred=rf_clf.predict(X_test)\n",
         "print('RandomForestClassifier 정확도{0:.4f}'.format(accuracy_score(y_test,rf_pred)))\n",
         "\n",
-        "# 로지스틱회귀 학습/예측/평가\n",
+        "# Logistic Regression 학습/예측/평가\n",
         "lr_clf.fit(X_train,y_train)\n",
         "lr_pred=lr_clf.predict(X_test)\n",
         "print('LogisticRegression 정확도{0:.4f}'.format(accuracy_score(y_test, lr_pred)))"
